live resume link

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <ul>
                     <li class="bullets">student | developer | human</li>
                     <li class="bullets">changnat at usc dot edu</li>
-                    <li class="bullets">resume: <a>insert online resume link here</a></li>
+                    <li class="bullets">resume: <a>https://drive.google.com/file/d/0B3ElACcF_V4NOE9aSzZiYU1Da2s/view?usp=sharing</a></li>
                     
                 </ul>
             </div>
