updating bg images:

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<!-- One -->
 			<section id="one" class="main special">
 				<div class="container">
-					
+					<span class="image fit primary"><img src="images/pic01.jpg" alt="" /></span>
 					<div class="content">
 						<header class="major">
 							<h2>Who I am</h2>
@@ -46,7 +46,7 @@
 		<!-- Two -->
 			<section id="two" class="main special">
 				<div class="container">
-					<span class="image fit primary"><img src="images/surfing.gif" alt="" /></span>
+					<span class="image fit primary"><img src="images/pic02.jpg" alt="" /></span>
 					<div class="content">
 						<header class="major">
 							<h2>stuff I do</h2>
@@ -123,7 +123,7 @@
 						<li><a href="https://github.com/nathan98chang" class="icon alt fa-github-square"><span class="label">Github</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Nathan Chang</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Demo Images: <a href="http://unsplash.com">Unsplash</a></li>
+						<li>&copy; Nathan Chang</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Demo Images: National Geographic</li>
 					</ul>
 				</footer>
 			</section>
