site build 1 complete

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>who is nathan chang</title>
+		<title>Nathan Chang</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -20,7 +20,7 @@
 			<section id="header">
 				<header class="major">
 					<h1>who is nathan chang?</h1>
-					<p>lifelong learner. big thinker. board rider.</a></p>
+					<p>lifelong learner. creative thinker. sideways rider.</a></p>
 				</header>
 				<div class="container">
 					<ul class="actions">
@@ -29,29 +29,51 @@
 				</div>
 			</section>
 
-		<!-- One -->
+		<!-- Biography -->
 			<section id="one" class="main special">
 				<div class="container">
-					<span class="image fit primary"><img src="images/pic01.jpg" alt="" /></span>
+					<span class="image fit primary"><img src="images/oaphoto.jpg" alt="" /></span>
 					<div class="content">
 						<header class="major">
 							<h2>Who I am</h2>
 						</header>
-						<p>I'm a </p>
+						<p>I'm a sophomore at the University of Southern California studying Computer Science and Business Administration with a minor in Philosophy.</p>
 					</div>
 					<a href="#two" class="goto-next scrolly">Next</a>
 				</div>
 			</section>
 
-		<!-- Two -->
+		<!-- Coursework -->
 			<section id="two" class="main special">
 				<div class="container">
-					<span class="image fit primary"><img src="images/pic02.jpg" alt="" /></span>
+					<span class="image fit primary"><img src="images/presenting.jpg" alt="" /></span>
+					<div class="content">
+						<header class="major">
+							<h2>Academics</h2>
+						</header>
+                        <h4>the mains</h4>
+                        <div id="classes"><b>CSCI 201 (IP)</b> - Principles of Software Development</div>
+                        <div id="classes"><b>CSCI 104</b> - Data Structures and Algorithms</div>
+                        <div id="classes"><b>CSCI 170</b> - Discrete Methods in Computer Science</div>
+                        <div id="classes"><b>ITP 125</b> - Introduction to Network Security</div>
+                        <br>
+                        <br>
+                        <h4>dessert</h4>
+                        <div id="classes"><b>PHED 104a</b> - Principles of Self Defense</div>
+					</div>
+					<a href="#three" class="goto-next scrolly">Next</a>
+				</div>
+			</section>
+
+		<!-- Interests -->
+			<section id="three" class="main special">
+				<div class="container">
+					<span class="image fit primary"><img src="images/car.jpg" alt="" /></span>
 					<div class="content">
 						<header class="major">
 							<h2>stuff I do</h2>
 						</header>
-						<p>when I'm not working or studying:</p>
+						<p>building blocks of my personality</p>
 						<ul class="icons-grid">
 							<li>
 								<span class="icon major fa-tint"></span>
@@ -66,27 +88,27 @@
 								<h3>Coding</h3>
 							</li>
 							<li>
-								<span class="icon major fa-coffee"></span>
-								<h3> FeugiatSed</h3>
+								<span class="icon major fa-music"></span>
+								<h3>Singin' and Writin'</h3>
 							</li>
 						</ul>
 					</div>
-					<a href="#three" class="goto-next scrolly">Next</a>
+					<a href="#four" class="goto-next scrolly">Next</a>
 				</div>
 			</section>
 
-		<!-- Three -->
-			<section id="three" class="main special">
+		<!-- Current Pursuits -->
+			<section id="four" class="main special">
 				<div class="container">
-					<span class="image fit primary"><img src="images/pic03.jpg" alt="" /></span>
+					<span class="image fit primary"><img src="images/night.jpg" alt="" /></span>
 					<div class="content">
 						<header class="major">
 							<h2>Right now?</h2>
 						</header>
-						<p>Aliquam ante ac id. Adipiscing interdum lorem praesent fusce pellentesque arcu feugiat. Consequat sed ultricies rutrum. Sed adipiscing eu amet interdum lorem blandit vis ac commodo aliquet integer vulputate phasellus lorem ipsum dolor lorem magna consequat sed etiam adipiscing interdum.</p>
+						<p>Currently working some on-campus jobs, focusing on schoolwork, and studying web applications on the side.</p>
 						<br>
 						<br>
-						<br>
+                        <p>seeking internships!!!</p>
 						<p> email: changnat at usc dot edu </p>
 						<a href="https://drive.google.com/file/d/1y9P3CEx4hTBAtj0Tx8N8h9DwM4YfvtSS/view?usp=sharing">resume</a>
 					</div>
