minor text edits

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<section id="header">
 				<header class="major">
 					<h1>who is nathan chang?</h1>
-					<p>lifelong learner. creative thinker. sideways rider.</a></p>
+					<p>lifelong learner. creative thinker. board rider.</a></p>
 				</header>
 				<div class="container">
 					<ul class="actions">
@@ -111,6 +111,7 @@
                         <p>seeking internships!!!</p>
 						<p> email: changnat at usc dot edu </p>
 						<a href="https://drive.google.com/file/d/1y9P3CEx4hTBAtj0Tx8N8h9DwM4YfvtSS/view?usp=sharing">resume</a>
+                        <p>links down below</p>
 					</div>
 					<!-- <a href="#footer" class="goto-next scrolly">Next</a> -->
 				</div>
