--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 						<li><a href="https://github.com/nathan98chang" class="icon alt fa-github-square"><span class="label">Github</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Nathan Chang</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Demo Images: National Geographic</li>
+						<li>&copy; Nathan Chang</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</footer>
 			</section>
