content bio updates

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						<header class="major">
 							<h2>Who I am</h2>
 						</header>
-						<p>I'm a sophomore at the University of Southern California studying Computer Science and Business Administration with a minor in Philosophy.</p>
+						<p>I'm a sophomore at the University of Southern California (Fight On!) studying Computer Science and Business Administration with a minor in Philosophy. </p>
 					</div>
 					<a href="#two" class="goto-next scrolly">Next</a>
 				</div>
@@ -111,7 +111,8 @@
                         <p>seeking internships!!!</p>
 						<p> email: changnat at usc dot edu </p>
 						<a href="https://drive.google.com/file/d/1y9P3CEx4hTBAtj0Tx8N8h9DwM4YfvtSS/view?usp=sharing">resume</a>
-                        <p>links down below</p>
+                        <br>
+                        <p>social links down below</p>
 					</div>
 					<!-- <a href="#footer" class="goto-next scrolly">Next</a> -->
 				</div>
