updating resume link

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 						<br>
                         <p>seeking internships!!!</p>
 						<p> email: changnat at usc dot edu </p>
-						<a href="https://drive.google.com/file/d/1y9P3CEx4hTBAtj0Tx8N8h9DwM4YfvtSS/view?usp=sharing">resume</a>
+						<a href="https://www.dropbox.com/s/wl9vj5jlkwjv67b/chang_nathan.pdf?dl=0">resume</a>
                         <br>
                         <br>
                         <br>
