--- a/index.html
+++ b/index.html
@@ -105,12 +105,11 @@
 						<header class="major">
 							<h2>Right now?</h2>
 						</header>
-						<p>Currently working some on-campus jobs, focusing on schoolwork, and studying web applications on the side.</p>
+						<p>Currently working some on-campus jobs, focusing on schoolwork, and studying web applications on the side. Starting as a Software Developer intern at IBM this summer.</p>
 						<br>
 						<br>
-                        <p>seeking internships!!!</p>
 						<p> email: changnat at usc dot edu </p>
-						<a href="https://www.dropbox.com/s/wl9vj5jlkwjv67b/chang_nathan.pdf?dl=0">resume</a>
+						<a href="https://drive.google.com/file/d/1y9P3CEx4hTBAtj0Tx8N8h9DwM4YfvtSS/view?usp=sharing">resume</a>
                         <br>
                         <br>
                         <br>
