--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 						<header class="major">
 							<h2>Right now?</h2>
 						</header>
-						<p>Currently working some on-campus jobs, focusing on schoolwork, and studying web applications on the side. Starting as a Software Developer intern at IBM this summer.</p>
+						<p>Currently working some on-campus jobs, focusing on schoolwork, and studying graphic/product on the side. Starting as a Software Developer intern with IBM's Watson and Cloud Computing team this summer.</p>
 						<br>
 						<br>
 						<p> email: changnat at usc dot edu </p>
@@ -144,11 +144,11 @@
 						<li><a href="https://open.spotify.com/user/124112901" class="icon alt fa-spotify"><span class="label">Spotify</span></a></li>
 						<li><a href="https://www.facebook.com/nathan.chang.98" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
 						<li><a href="https://www.instagram.com/nathannchang/" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="https://www.linkedin.com/in/nathan-chang-35784b128/" class="icon alt fa-linkedin"><span class="label">Linkedin</span></a></li>
+						<li><a href="https://www.linkedin.com/in/thisisnathanchang/" class="icon alt fa-linkedin"><span class="label">Linkedin</span></a></li>
 						<li><a href="https://github.com/nathan98chang" class="icon alt fa-github-square"><span class="label">Github</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Nathan Chang</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Nathan Chang</li><li>Site Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</footer>
 			</section>
