--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 						<header class="major">
 							<h2>Right now?</h2>
 						</header>
-						<p>Currently working some on-campus jobs, focusing on schoolwork, and studying graphic/product on the side. Starting as a Software Developer intern with IBM's Watson and Cloud Computing team this summer.</p>
+						<p>Currently working some on-campus jobs, focusing on extracurriculars, and studying graphic/product design on the side. Starting as a Software Developer intern with IBM's Watson and Cloud Computing team this summer.</p>
 						<br>
 						<br>
 						<p> email: changnat at usc dot edu </p>
