updating personal info, going to overhaul UI completely later though

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 		<!-- Header -->
 			<section id="header">
 				<header class="major">
-					<h1>who is nathan chang?</h1>
-					<p>lifelong learner. creative thinker. board rider.</a></p>
+					<h1>Nathan Chang</h1>
+					<p>Centered by a passion for people and technology. Going wherever that takes me.</a></p>
 				</header>
 				<div class="container">
 					<ul class="actions">
@@ -37,7 +37,7 @@
 						<header class="major">
 							<h2>Who I am</h2>
 						</header>
-						<p>I'm a sophomore at the University of Southern California (Fight On!) studying Computer Science and Business Administration with a minor in Philosophy. </p>
+						<p>I'm a junior at the University of Southern California (Fight On!) studying Computer Science and Business Administration with a minor in Philosophy. </p>
 					</div>
 					<a href="#two" class="goto-next scrolly">Next</a>
 				</div>
