redesign for this semester

--- a/index.html
+++ b/index.html
@@ -1,166 +1,46 @@
 <!DOCTYPE HTML>
-<!--
-	Highlights by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>Nathan Chang</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 	</head>
-	<body>
-
-		<!-- Header -->
-			<section id="header">
-				<header class="major">
-					<h1>Nathan Chang</h1>
-					<p>Centered by a passion for people and technology. Going wherever that takes me.</a></p>
-				</header>
-				<div class="container">
-					<ul class="actions">
-						<li><a href="#one" class="button special scrolly">Enter</a></li>
-					</ul>
-				</div>
-			</section>
-
-		<!-- Biography -->
-			<section id="one" class="main special">
-				<div class="container">
-					<span class="image fit primary"><img src="images/oaphoto.jpg" alt="" /></span>
-					<div class="content">
-						<header class="major">
-							<h2>Who I am</h2>
-						</header>
-						<p>I'm a junior at the University of Southern California (Fight On!) studying Computer Science and Business Administration with a minor in Philosophy. </p>
-					</div>
-					<a href="#two" class="goto-next scrolly">Next</a>
-				</div>
-			</section>
-
-		<!-- Coursework -->
-			<section id="two" class="main special">
-				<div class="container">
-					<span class="image fit primary"><img src="images/presenting.jpg" alt="" /></span>
-					<div class="content">
-						<header class="major">
-							<h2>Academics</h2>
-						</header>
-                        <h4>the mains</h4>
-                        <div id="classes"><b>CSCI 201 (IP)</b> - Principles of Software Development</div>
-                        <div id="classes"><b>CSCI 104</b> - Data Structures and Algorithms</div>
-                        <div id="classes"><b>CSCI 170</b> - Discrete Methods in Computer Science</div>
-                        <div id="classes"><b>ITP 125</b> - Introduction to Network Security</div>
-                        <br>
-                        <br>
-                        <h4>dessert</h4>
-                        <div id="classes"><b>PHED 104a</b> - Principles of Self Defense</div>
-					</div>
-					<a href="#three" class="goto-next scrolly">Next</a>
-				</div>
-			</section>
-
-		<!-- Interests -->
-			<section id="three" class="main special">
-				<div class="container">
-					<span class="image fit primary"><img src="images/car.jpg" alt="" /></span>
-					<div class="content">
-						<header class="major">
-							<h2>stuff I do</h2>
-						</header>
-						<p>building blocks of my personality</p>
-						<ul class="icons-grid">
-							<li>
-								<span class="icon major fa-tint"></span>
-								<h3>Surfing</h3>
-							</li>
-							<li>
-								<span class="icon major fa-book"></span>
-								<h3>Reading</h3>
-							</li>
-							<li>
-								<span class="icon major fa-code"></span>
-								<h3>Coding</h3>
-							</li>
-							<li>
-								<span class="icon major fa-music"></span>
-								<h3>Singin' and Writin'</h3>
-							</li>
-						</ul>
-					</div>
-					<a href="#four" class="goto-next scrolly">Next</a>
-				</div>
-			</section>
-
-		<!-- Current Pursuits -->
-			<section id="four" class="main special">
-				<div class="container">
-					<span class="image fit primary"><img src="images/night.jpg" alt="" /></span>
-					<div class="content">
-						<header class="major">
-							<h2>Right now?</h2>
-						</header>
-						<p>Currently working some on-campus jobs, focusing on extracurriculars, and studying graphic/product design on the side. Starting as a Software Developer intern with IBM's Watson and Cloud Computing team this summer.</p>
-						<br>
-						<br>
-						<p> email: changnat at usc dot edu </p>
-						<a href="https://drive.google.com/file/d/1y9P3CEx4hTBAtj0Tx8N8h9DwM4YfvtSS/view?usp=sharing">resume</a>
-                        <br>
-                        <br>
-                        <br>
-                        <p>social links down below</p>
-					</div>
-					<!-- <a href="#footer" class="goto-next scrolly">Next</a> -->
-				</div>
-			</section>
+	<body id="homepage">
 		
-			<section id="footer">
-				<!--
-				<div class="container">
-					<header class="major">
-						<h2>Get in touch</h2>
-					</header>
-					<form method="post" action="#">
-						<div class="row uniform">
-							<div class="6u 12u$(xsmall)"><input type="text" name="name" id="name" placeholder="Name" /></div>
-							<div class="6u$ 12u$(xsmall)"><input type="email" name="email" id="email" placeholder="Email" /></div>
-							<div class="12u$"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
-							<div class="12u$">
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" class="special" /></li>
-								</ul>
-							</div>
-						</div>
-					</form>
-				</div>
-				-->
-				<footer>
-					<ul class="icons">
-						<li><a href="https://open.spotify.com/user/124112901" class="icon alt fa-spotify"><span class="label">Spotify</span></a></li>
-						<li><a href="https://www.facebook.com/nathan.chang.98" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="https://www.instagram.com/nathannchang/" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="https://www.linkedin.com/in/thisisnathanchang/" class="icon alt fa-linkedin"><span class="label">Linkedin</span></a></li>
-						<li><a href="https://github.com/nathan98chang" class="icon alt fa-github-square"><span class="label">Github</span></a></li>
-					</ul>
-					<ul class="copyright">
-						<li>&copy; Nathan Chang</li><li>Site Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-				</footer>
-			</section>
+        <div class="main-container">
+            
+            <div class="vertical-container">
+                <div class="page-heading">
+                    Nathan Chang
+                </div>
+                <div class="page-description">
+                    centered by passion for people, prose, and products
+                </div>
+                <div class="home-center-container">
+                    <div class="directional-word">
+                        <a class="page-link" href="life.html">LIFE</a>
+                        <!-- temporary custom alignment fix -->
+                        <br />
+                        <br />
+                        <br />
+                    </div>
+                    <div class="center-image">
+                        <img class="center-image" src="assets/images/straight_figure.png" alt="artist silhouette gesturing to his left and right">
+                    </div>
+                    <div class="directional-word">
+                        <a class="page-link" href="work.html">WORK</a>
+                        <!-- temporary custom alignment fix -->
+                        <br />
+                        <br />
+                        <br />
+                    </div>
+                </div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
-
+            </div>
+            
+        </div>
+		
 	</body>
 </html>
