experimenting with responsiveness

--- a/life.html
+++ b/life.html
@@ -4,7 +4,7 @@
 	<head>
 		<title>Nathan Chang</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!-- <meta name="viewport" content="width=device-width, initial-scale=1" /> -->
 		<link rel="stylesheet" href="assets/css/main.css" />
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 	</head>
@@ -26,7 +26,7 @@
                             <p>Here’s the person behind the product.</p>
                             <p>I enjoy literature, and I try to <a class="page-link" href="https://medium.com/@thisisnathan"><b>write</b></a> when I can.
                             Currently reading <i>Cat’s Cradle</i> by Vonnegut.</p>
-                            <p>I took up surfing last winter and have been having a blast doing that. Insert simile about what surfing is like.</p>
+                            <p>Surfing is probably my favorite thing to do for fun. Started last winter and haven't looked back since.</p>
                             <p>In case you couldn’t guess, I’m a big fan of jazz. Spotify below.</p>
                         </div>
                         <div class="life-body-links">
