--- a/work.html
+++ b/work.html
@@ -4,7 +4,7 @@
 	<head>
 		<title>Nathan Chang</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!-- <meta name="viewport" content="width=device-width, initial-scale=1" /> -->
 		<link rel="stylesheet" href="assets/css/main.css" />
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 	</head>
@@ -21,7 +21,7 @@
                     <div class="body-container">
                         <div class="body-paragraph">
                             <p>Here’s the <a class="page-link" href="https://drive.google.com/file/d/1y9P3CEx4hTBAtj0Tx8N8h9DwM4YfvtSS/view?usp=sharing"><b>resume</b></a>.</p>
-                            <p>This past summer, I interned as a <b>software developer</b> on IBM’s Blockchain Solutions team in Austin, TX. I honestly used to want to be a program manager, but the days seem to go by a lot faster when I’m writing <i>code</i>, not emails. </p>
+                            <p>This past summer, I interned as a <b>software developer</b> on IBM’s Blockchain Solutions team in Austin, TX. I honestly used to want to be a program manager, but the days seem to go by a lot faster when I’m writing <i>code</i>, not emails.</p>
                             <p>I like to find creative solutions to technical problems and will go wherever that takes me.</p>
                         </div>
                         <div class="work-body-links">
