--- a/life.html
+++ b/life.html
@@ -24,7 +24,7 @@
                     <div class="body-container">
                         <div class="body-paragraph">
                             <p>Here’s the person behind the product.</p>
-                            <p>I enjoy literature, and I try to <a class="page-link" href="https://medium.com/@thisisnathan"><b>write</b></a> when I can.
+                            <p>I love literature, and I try to <a class="page-link" href="https://medium.com/@thisisnathan"><b>write</b></a> when I can.
                             Currently reading <i>Cat’s Cradle</i> by Vonnegut.</p>
                             <p>Surfing is probably my favorite thing to do for fun. Started last winter and haven't looked back since.</p>
                             <p>In case you couldn’t guess, I’m a big fan of jazz. Spotify below.</p>
