--- a/work.html
+++ b/work.html
@@ -20,8 +20,9 @@
                 <div class="work-center-container">
                     <div class="body-container">
                         <div class="body-paragraph">
-                            <p>Here’s the <a class="page-link" href="https://drive.google.com/file/d/1y9P3CEx4hTBAtj0Tx8N8h9DwM4YfvtSS/view?usp=sharing"><b>resume</b></a>.</p>
-                            <p>This past summer, I interned as a <b>software developer</b> on IBM’s Blockchain Solutions team in Austin, TX. I honestly used to want to be a program manager, but the days seem to go by a lot faster when I’m writing <i>code</i>, not emails.</p>
+                            <p>Here’s the <a class="page-link" href="https://drive.google.com/file/d/1y9P3CEx4hTBAtj0Tx8N8h9DwM4YfvtSS/view?usp=sharing"><b>resume</b></a> and contact: [changnat at usc dot edu].</p>
+                            <p>This past summer, I interned as a <b>software developer</b> on IBM’s Blockchain Solutions team in Austin, TX. I used to want to be a program manager, but the days seem to go by a lot faster when I’m writing <i>code</i>, not emails.</p>
+                            <p></p>
                             <p>I like to find creative solutions to technical problems and will go wherever that takes me.</p>
                         </div>
                         <div class="work-body-links">
