--- a/life.html
+++ b/life.html
@@ -26,7 +26,7 @@
                             <p>Here’s a little bit about the person behind the keys.</p>
                             <p>I love literature, and I try to <a class="page-link" href="https://medium.com/@thisisnathan"><b>write</b></a> when I can. As for the reads, I'll read mostly anything so long as it's at least 50 years old (kidding). All time favorite is <i>Brave New World</i> by Huxley; currently reading <i>Cat’s Cradle</i> by Vonnegut.</p>
                             <p>Surfing is probably my favorite thing to do for fun. Started last winter and haven't looked back since.</p>
-                            <p>In case you couldn’t guess, I’m a big fan of jazz. Well, that and a whole lot of other rhythmic rhapsody. Spotify below.</p>
+                            <p>In case you couldn’t guess, I’m a big fan of jazz. Spotify below.</p>
                         </div>
                         <div class="life-body-links">
                             <a href="https://open.spotify.com/user/124112901"><i class="fab fa-spotify life-link-icon" ></i></a>
