--- a/life.html
+++ b/life.html
@@ -19,7 +19,9 @@
                 
                 <div class="life-center-container">
                     <div class="center-image">
-                        <img class="center-image" src="assets/images/pointing_right_figure.png" alt="artist silhouette gesturing to his left and right">
+                        <a href="index.html">
+                            <img class="center-image" src="assets/images/pointing_right_figure.png" alt="artist silhouette gesturing to his left and right">
+                        </a>
                     </div>
                     <div class="body-container">
                         <div class="body-paragraph">
