--- a/work.html
+++ b/work.html
@@ -31,7 +31,9 @@
                         </div>
                     </div>
                     <div class="center-image">
-                        <img class="center-image" src="assets/images/pointing_left_figure.png" alt="artist silhouette gesturing to his left and right">
+                        <a href="index.html">
+                            <img class="center-image" src="assets/images/pointing_left_figure.png" alt="artist silhouette gesturing to his left and right">
+                        </a>
                     </div>
                 </div>
                 
