--- a/work.html
+++ b/work.html
@@ -21,9 +21,9 @@
                     <div class="body-container">
                         <div class="body-paragraph">
                             <p>Here’s the <a class="page-link" href="https://drive.google.com/file/d/1y9P3CEx4hTBAtj0Tx8N8h9DwM4YfvtSS/view?usp=sharing"><b>resume</b></a> and contact: [changnat at usc dot edu].</p>
-                            <p>This past summer, I interned as a <b>software developer</b> on IBM’s Blockchain Solutions team in Austin, TX. There, I worked on an internal data analytics tool (Java-based) for support managers. I realized that summer that the days go by faster when I'm writing <i>code</i>, not emails.</p>
+                            <p>This past summer, I interned as a <b>software developer</b> on IBM’s Blockchain Solutions team in Austin, TX. There, I worked on an internal data analytics tool (Java-based) for support managers. I realized that summer that although I prefer writing code to writing emails, I do enjoy a bit of customer interaction.</p>
                             <p></p>
-                            <p>Ultimately, I find the most joy in positions that require a harmonious blend of creativity and technical skill.</p>
+                            <p>Ultimately, I'd like to build up towards a role in product management.</p>
                         </div>
                         <div class="work-body-links">
                             <a href="https://www.linkedin.com/in/thisisnathanchang/"><i class="fab fa-linkedin work-link-icon" ></i></a>
