description changes, tidying up sizing

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<title>Nathan Chang</title>
 		<meta charset="utf-8" />
-		<!-- <meta name="viewport" content="width=device-width, initial-scale=1" /> -->
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body id="homepage">
@@ -16,7 +16,7 @@
                     Nathan Chang
                 </div>
                 <div class="page-description">
-                    centered by passion for people, prose, and products
+                    cs and business and philosophy student at USC
                 </div>
                 <div class="home-center-container">
                     <div class="directional-word">
