--- a/work.html
+++ b/work.html
@@ -4,7 +4,7 @@
 	<head>
 		<title>Nathan Chang</title>
 		<meta charset="utf-8" />
-		<!-- <meta name="viewport" content="width=device-width, initial-scale=1" /> -->
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 	</head>
@@ -20,8 +20,8 @@
                 <div class="work-center-container">
                     <div class="body-container">
                         <div class="body-paragraph">
-                            <p>Here’s the <a class="page-link" href="https://drive.google.com/file/d/1y9P3CEx4hTBAtj0Tx8N8h9DwM4YfvtSS/view?usp=sharing"><b>resume</b></a> and contact: [changnat at usc dot edu].</p>
-                            <p>This past summer, I interned as a <b>software developer</b> on IBM’s Blockchain Solutions team in Austin, TX. There, I worked on an internal data analytics tool (Java-based) for support managers. I realized that summer that although I prefer writing code to writing emails, I do enjoy a bit of customer interaction.</p>
+                            <p>Here’s the <a class="page-link" href="https://drive.google.com/file/d/1y9P3CEx4hTBAtj0Tx8N8h9DwM4YfvtSS/view?usp=sharing"><b>resume</b></a> and contact: [changnat at usc dot edu]. Currently OOC for a semester abroad, so please excuse any awkward time-zone discrepancies.</p>
+                            <p>This past summer, I interned as a <b>software developer</b> on IBM’s Blockchain Solutions team in Austin, TX. There, I worked on an internal data analytics tool (Java-based) for support managers. I realized that summer that although I prefer writing code to writing emails, I do enjoy a good bit of customer interaction.</p>
                             <p></p>
                             <p>Ultimately, I'd like to build up towards a role in product management.</p>
                         </div>
