--- a/life.html
+++ b/life.html
@@ -4,7 +4,7 @@
 	<head>
 		<title>Nathan Chang</title>
 		<meta charset="utf-8" />
-		<!-- <meta name="viewport" content="width=device-width, initial-scale=1" /> -->
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 	</head>
@@ -28,7 +28,7 @@
                             <p>Here’s a little bit about the person behind the keys.</p>
                             <p>I love reading, and I try to <a class="page-link" href="https://medium.com/@thisisnathan"><b>write</b></a> when I can. I'll read mostly anything so long as it's at least 50 years old (kidding). All time favorite is <i>Brave New World</i> by Huxley; currently reading <i>Catch-22</i> by Heller.</p>
                             <p>Surfing is probably my favorite thing to do for fun. Started last winter and haven't looked back since.</p>
-                            <p>I’m also a big fan of jazz (and other things)! Spotify below.</p>
+                            <p>I’m also a big fan of jazz (and other genres)! Spotify below.</p>
                         </div>
                         <div class="life-body-links">
                             <a href="https://open.spotify.com/user/124112901"><i class="fab fa-spotify life-link-icon" ></i></a>
