updating work description

--- a/work.html
+++ b/work.html
@@ -30,7 +30,8 @@
                     <div class="body-container">
                         <div class="body-paragraph">
                             <p>Here’s the <a class="page-link" href="https://drive.google.com/file/d/1y9P3CEx4hTBAtj0Tx8N8h9DwM4YfvtSS/view?usp=sharing"><b>resume</b></a> and contact: [changnat at usc dot edu]. Currently OOC for a semester abroad, so please excuse any awkward time-zone discrepancies.</p>
-                            <p>This past summer, I interned as a <b>software developer</b> on IBM’s Blockchain Solutions team in Austin, TX. There, I worked on an internal data analytics tool (Java-based) for support managers. I realized that summer that although I prefer writing code to writing emails, I do enjoy a good bit of customer interaction.</p>
+                            <p>This past summer, I interned as a <b>software developer</b> on IBM’s Blockchain Solutions team in Austin, TX. There, I worked on an internal data analytics tool (Java-based) for support managers. I realized that summer that although I prefer writing code to writing emails, I love working directly with clients.</p>
+                            <p>Fortunately, I'll be doing just that with <a class="page-link">C3.ai</a> this summer by working as a Forward-Deployed Engineering Intern in San Francisco, CA.</p>
                             <p></p>
                             <p>Ultimately, I'd like to build up towards a role in product management.</p>
                         </div>
