redesign fully implemented

--- a/jazz.html
+++ b/jazz.html
@@ -17,9 +17,8 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 	</head>
-    
-	<body id="homepage">
-		<a href="/jazz.html">
+	<body id="jazzpage">
+		<a href="/usc.html">
         <div class="main-container">
             
             <div class="vertical-container">
@@ -41,9 +40,8 @@
             <p>changnat at usc dot edu</p>
         </div>
         <div class="footer2">
-            <p><a href="https://drive.google.com/file/d/1LzFLeyoAJKEWLJCwBwrqt9yKjbHpiM-e/view?usp=sharing" target="_blank" class="page-link" id="link1">resume</a></p>
+            <p><a href="https://drive.google.com/file/d/1LzFLeyoAJKEWLJCwBwrqt9yKjbHpiM-e/view?usp=sharing" target="_blank" id="link2">resume</a></p>
         </div>
-        </a>
+		</a>
 	</body>
-   
 </html>
