--- a/index.html
+++ b/index.html
@@ -5,11 +5,25 @@
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-138155334-1"></script>
         <script>
-          window.dataLayer = window.dataLayer || [];
-          function gtag(){dataLayer.push(arguments);}
-          gtag('js', new Date());
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
 
-          gtag('config', 'UA-138155334-1');
+            gtag('config', 'UA-138155334-1');
+
+            var bg_color = "#EAEAEA"
+            var rs_color = "#89A2F6"
+
+            function colorChange(x) {
+                bg_color = (bg_color === "#89A2F6" ? "#FFAA9D" :
+                      bg_color === "#FFAA9D" ? "#EAEAEA" :
+                      "#89A2F6");
+                x.style.background = bg_color;
+                rs_color = (rs_color === "#89A2F6" ? "#FFAA9D" :
+                      rs_color === "#FFAA9D" ? "#EAEAEA" :
+                      "#89A2F6");
+                document.getElementById("res_link").style.color = rs_color;
+            }
         </script>
 		<title>Nathan Chang</title>
 		<meta charset="utf-8" />
@@ -17,9 +31,8 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 	</head>
-    
-	<body id="homepage">
-		<a href="/jazz.html">
+	<body id="homepage" onclick="colorChange(this)">
+		<!--<a href="index.html">-->
         <div class="main-container">
             
             <div class="vertical-container">
@@ -41,9 +54,8 @@
             <p>changnat at usc dot edu</p>
         </div>
         <div class="footer2">
-            <p><a href="https://drive.google.com/file/d/1LzFLeyoAJKEWLJCwBwrqt9yKjbHpiM-e/view?usp=sharing" target="_blank" class="page-link" id="link1">resume</a></p>
+            <p><a href="https://drive.google.com/file/d/1LzFLeyoAJKEWLJCwBwrqt9yKjbHpiM-e/view?usp=sharing" target="_blank" id="res_link" onmouseover="this.style.color='#FBFCFC'" onmouseout="this.style.color=rs_color">resume</a></p>
         </div>
-        </a>
+		<!--</a>-->
 	</body>
-   
 </html>
