--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
         </div>
         
         <div class="footer1">
-            <p>changnat at usc dot edu</p>
+            <p>(NOTE: website v3 in progress)</p>
+            <p>nathan98chang at gmail</p>
         </div>
         <div class="footer2">
             <p><a href="https://drive.google.com/file/d/1CQuXsyFKsUiWWKlCe5kp6a3KeT5xU30f/view?usp=sharing" target="_blank" id="res_link" onmouseover="this.style.color='#FBFCFC'" onmouseout="this.style.color=rs_color">resume</a></p>
